--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/config": "^3.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "cache-manager": "^5.2.3",
     "cache-manager-redis-store": "^3.0.1",
     "redis": "^4.6.7",
     "reflect-metadata": "^0.1.13",
